Cleanup whitespace, fix styling

--- a/style/main.css
+++ b/style/main.css
@@ -15,3 +15,6 @@ h1, h2 {
   background: grey;
 }
 
+.outcome {
+  display: none;
+}
